--- a/amplify/backend/auth/porcepichubcad5a301/porcepichubcad5a301-cloudformation-template.yml
+++ b/amplify/backend/auth/porcepichubcad5a301/porcepichubcad5a301-cloudformation-template.yml
@@ -89,6 +89,9 @@ Parameters:
   hostedUI:
     Type: String
             
+  triggers:
+    Type: String
+              
   hostedUIDomainName:
     Type: String
                       
@@ -97,22 +100,28 @@ Parameters:
       
   hostedUIProviderMeta:
     Type: String
-                      
-  userPoolGroupList:
-    Type: CommaDelimitedList
-      
-  serviceName:
-    Type: String
-                      
-  dependsOn:
-    Type: CommaDelimitedList
-      
+              
   hostedUIProviderCreds:
     Type: String
               
   oAuthMetadata:
     Type: String
-                        
+                      
+  userPoolGroupList:
+    Type: CommaDelimitedList
+                  
+  serviceName:
+    Type: String
+                    
+  parentStack:
+    Type: String
+                
+  permissions:
+    Type: CommaDelimitedList
+              
+  dependsOn:
+    Type: CommaDelimitedList
+    
 Conditions:
   ShouldNotCreateEnvResources: !Equals [ !Ref env, NONE ]
 
@@ -124,7 +133,7 @@ Resources:
   # Created to allow the UserPool SMS Config to publish via the Simple Notification Service during MFA Process
     Type: AWS::IAM::Role
     Properties:
-      RoleName: !If [ShouldNotCreateEnvResources, 'porcep1df5eba8_sns-role', !Join ['',[ 'sns', '1df5eba8', !Select [3, !Split ['-', !Ref 'AWS::StackName']], '-', !Ref env]]]
+      RoleName: !If [ShouldNotCreateEnvResources, 'porcepcad5a301_sns-role', !Join ['',[ 'sns', 'cad5a301', !Select [3, !Split ['-', !Ref 'AWS::StackName']], '-', !Ref env]]]
       AssumeRolePolicyDocument: 
         Version: "2012-10-17"
         Statement: 
@@ -136,10 +145,10 @@ Resources:
               - "sts:AssumeRole"
             Condition: 
               StringEquals:
-                sts:ExternalId: porcep1df5eba8_role_external_id
+                sts:ExternalId: porcepcad5a301_role_external_id
       Policies: 
         - 
-          PolicyName: porcep1df5eba8-sns-policy
+          PolicyName: porcepcad5a301-sns-policy
           PolicyDocument: 
             Version: "2012-10-17"
             Statement: 
@@ -160,7 +169,7 @@ Resources:
       Schema: 
         
         -
-          Name: email
+          Name: name
           Required: true
           Mutable: true
         
@@ -185,15 +194,27 @@ Resources:
       SmsVerificationMessage: !Ref smsVerificationMessage
       SmsConfiguration: 
         SnsCallerArn: !GetAtt SNSRole.Arn
-        ExternalId: porcep1df5eba8_role_external_id
+        ExternalId: porcepcad5a301_role_external_id
     
+  
+    
+    
+  
+    
+    
+  
+  
+   
+    
+  # Updating lambda role with permissions to Cognito
+  
   
   UserPoolClientWeb:
   # Created provide application access to user pool
   # Depends on UserPool for ID reference
     Type: "AWS::Cognito::UserPoolClient"
     Properties:
-      ClientName: porcep1df5eba8_app_clientWeb
+      ClientName: porcepcad5a301_app_clientWeb
       
       RefreshTokenValidity: !Ref userpoolClientRefreshTokenValidity
       UserPoolId: !Ref UserPool
@@ -203,7 +224,7 @@ Resources:
   # Depends on UserPool for ID reference
     Type: "AWS::Cognito::UserPoolClient"
     Properties:
-      ClientName: porcep1df5eba8_app_client
+      ClientName: porcepcad5a301_app_client
       
       GenerateSecret: !Ref userpoolClientGenerateSecret
       RefreshTokenValidity: !Ref userpoolClientRefreshTokenValidity
@@ -214,7 +235,7 @@ Resources:
   # Created to execute Lambda which gets userpool app client config values
     Type: 'AWS::IAM::Role'
     Properties:
-      RoleName: !If [ShouldNotCreateEnvResources, !Ref userpoolClientLambdaRole, !Join ['',['upClientLambdaRole', '1df5eba8', !Select [3, !Split ['-', !Ref 'AWS::StackName']], '-', !Ref env]]]
+      RoleName: !If [ShouldNotCreateEnvResources, !Ref userpoolClientLambdaRole, !Join ['',['upClientLambdaRole', 'cad5a301', !Select [3, !Split ['-', !Ref 'AWS::StackName']], '-', !Ref env]]]
       AssumeRolePolicyDocument:
         Version: '2012-10-17'
         Statement:
@@ -268,7 +289,7 @@ Resources:
   # Marked as depending on UserPoolClientRole for easier to understand CFN sequencing
     Type: 'AWS::IAM::Policy'
     Properties:
-      PolicyName: porcep1df5eba8_userpoolclient_lambda_iam_policy
+      PolicyName: porcepcad5a301_userpoolclient_lambda_iam_policy
       Roles: 
         - !Ref UserPoolClientRole
       PolicyDocument:
@@ -285,7 +306,7 @@ Resources:
   # Marked as depending on UserPoolClientLambdaPolicy for easier to understand CFN sequencing
     Type: 'AWS::IAM::Policy'
     Properties:
-      PolicyName: porcep1df5eba8_userpoolclient_lambda_log_policy
+      PolicyName: porcepcad5a301_userpoolclient_lambda_log_policy
       Roles: 
         - !Ref UserPoolClientRole
       PolicyDocument:
@@ -672,7 +693,7 @@ Resources:
   # Always created
     Type: AWS::Cognito::IdentityPool
     Properties: 
-      IdentityPoolName: !If [ShouldNotCreateEnvResources, 'porcepichub1df5eba8_identitypool_1df5eba8', !Join ['',['porcepichub1df5eba8_identitypool_1df5eba8', '__', !Ref env]]]
+      IdentityPoolName: !If [ShouldNotCreateEnvResources, 'porcepichubcad5a301_identitypool_cad5a301', !Join ['',['porcepichubcad5a301_identitypool_cad5a301', '__', !Ref env]]]
       
       CognitoIdentityProviders:
         - ClientId:  !Ref UserPoolClient
