--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -14,9 +14,10 @@
       "output": {
         "authConfig": {
           "defaultAuthentication": {
-            "authenticationType": "AMAZON_COGNITO_USER_POOLS",
-            "userPoolConfig": {
-              "userPoolId": "authporcepichubcad5a301"
+            "authenticationType": "API_KEY",
+            "apiKeyConfig": {
+              "apiKeyExpirationDays": 7,
+              "description": "porcepichub"
             }
           },
           "additionalAuthenticationProviders": []
